changed html layout of guide page to correctly render on small screens

--- a/src/pages/guide/Guide.module.css
+++ b/src/pages/guide/Guide.module.css
@@ -6,15 +6,18 @@
   justify-content: space-evenly;
   align-items: center;
 }
-.header {
-  font-size: 2.8em;
-  margin-bottom: 20px;
+.header,
+.header-logo {
+  font-size: 2em;
   text-align: center;
+}
+.header-logo {
+  margin-bottom: 10px;
 }
 .logo {
   position: relative;
-  top: 26px;
-  width: 80px;
+  top: 12px;
+  width: 50px;
   border-radius: 50%;
   -webkit-box-shadow: var(--webkit-box-shadow);
   box-shadow: var(--box-shadow);
@@ -24,7 +27,7 @@
 }
 .button {
   border: 1px solid #1f8a58;
-  padding: 7px 53.15px;
+  padding: 4px 53.15px;
   border-radius: 25px;
   font-weight: 600;
   background: #4cc49a;
@@ -43,7 +46,7 @@
   justify-content: space-between;
   align-items: center;
   width: 375px;
-  height: 150px;
+  height: 135px;
   padding: 10px;
   box-shadow: var(--box-shadow);
   -webkit-box-shadow: var(--webkit-box-shadow);
@@ -54,7 +57,7 @@
 }
 .p {
   padding: 0 10px;
-  font-size: 0.9em;
+  font-size: 0.8em;
   text-align: center;
 }
 @media screen and (max-width: 1200px) {
@@ -70,15 +73,16 @@
   }
 }
 @media screen and (max-width: 770px) {
-  .header {
+  .header,
+  .header-logo {
     font-size: 1.4em;
   }
   .instructions {
     font-size: 0.8em;
   }
   .logo {
-    top: 12px;
-    width: 40px;
+    top: 10px;
+    width: 38px;
   }
   .card {
     height: 75px;
@@ -89,14 +93,15 @@
   }
 }
 @media screen and (max-height: 900px) {
-  .header {
+  .header,
+  .header-logo {
     font-size: 1.4em;
   }
   .instructions {
     font-size: 0.8em;
   }
   .logo {
-    top: 12px;
+    top: 10px;
     width: 40px;
   }
   .card {
@@ -115,7 +120,8 @@
   }
 }
 @media screen and (max-height: 600px) {
-  .header {
+  .header,
+  .header-logo {
     font-size: 1.2em;
   }
   .instructions {
@@ -145,7 +151,8 @@
   .container {
     justify-content: flex-start;
   }
-  .header {
+  .header,
+  .header-logo {
     font-size: 1em;
     margin: 0;
   }
